# bug_know

./: .dockerignore  .env.example  .gitignore  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  query_planner.py
backend/app/api/: __init__.py  deps.py  router.py  serializers.py
backend/app/cache/: __init__.py  redis_client.py
backend/app/core/: config.py  exceptions.py  logging.py  request_logging.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/llm/: __init__.py  openai_compatible.py  types.py
backend/app/ml/: __init__.py
backend/app/models/: __init__.py  detection_object.py  detection_task.py  diagnosis_report.py  entity_alias.py  knowledge_document.py  knowledge_document_entity.py  model_class_mapping.py  model_version.py  pest_entity.py  rag_chunk.py
backend/app/rag/: __init__.py  chunking.py  embeddings.py  parsing.py  vector_database.py
backend/app/repositories/: __init__.py  detection_task.py  (+7 more)
backend/migrations/: env.py  script.py.mako
backend/scripts/: create_detection_task.py  register_model_version.py  review_pest_knowledge.py  review_pest_mapping.py  seed_pest_mappings.py  smoke_deployment.py  update_detection_task_status.py  verify_model_artifact.py
backend/tests/: test_annotation_renderer.py  test_class_catalog.py  test_config.py  test_deployment_config.py  test_deployment_smoke.py  test_detection_object_repository.py  test_detection_routes.py  test_detection_run_service.py  test_detection_task.py  test_detection_task_repository.py  test_detection_task_service.py  test_diagnosis_report_service.py  test_diagnosis_routes.py  test_document_index_service.py  test_document_routes.py  test_document_storage.py  test_embeddings.py  test_entity_normalizer.py  test_errors.py  test_health.py  test_image_storage.py  test_knowledge_document_service.py  test_knowledge_question_service.py  test_knowledge_review_service.py  test_knowledge_routes.py  test_knowledge_search_service.py  test_llm_provider.py  test_model_lifespan.py  test_model_version.py  test_model_version_repository.py  test_pest_mapping_review_service.py  test_pest_mapping_seed.py  test_query_planning_agent.py  test_question_routes.py  test_rag_parsing_chunking.py  test_rate_limit.py  test_report_generation.py  test_vector_database.py  test_yolo_predictor.py
(+77 files in other folders)
