[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "agriguard-api"
version = "0.1.0"
description = "Backend API for the AgriGuard AI learning project"
requires-python = ">=3.11,<3.14"
dependencies = [
    "alembic>=1.14,<2.0",
    "asyncmy>=0.2.10,<1.0",
    "cryptography>=44,<48",
    "fastapi>=0.115,<1.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "mypy>=1.14,<2.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.9,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
pretty = true
